# time-series-auto-llm-paper-ma

./: ai_recommend_hyperparameters.txt  granger_analysis.txt  kpss_test.txt  llm_generated_time_series_analysis_report.md  main.py  pyproject.toml  stationarity_test.txt
output/: thesis.html  thesis.md  thesis.tex
output/templates/: thesis_template.tex
paper/0_overview/: 0_0_cover.md  0_0_title.md  0_1_author.md  0_1_contents.md  0_2_abstract.md  0_2_contents.md  0_3_abstract.md
paper/1_introduction/: 1_introduction.md
paper/2_background/: 2_1_background_timeseries.md  2_1_timeseries.md  2_2_background_hyperparameter.md  2_2_hyperparameter.md  2_3_background_generative_ai_and_timeseries.md  2_3_generative_ai_and_timeseries.md
paper/3_method/: 3_1_overview.md  3_2_data_and_processing.md  3_3_models.md  3_4_hyperparameter_tuning_with_llm.md  3_5_automated_report.md  3_5_environment_and_details.md
paper/4_experiments_and_results/: 4_1_experiments_settings_and_analysis.md  4_1_metrics.md  4_2_model_performance.md  4_3_llm_hyperparameter_recommendation.md  4_3_results.md  4_4_results_best_model.md
paper/5_conclusion/: 5_1_conclusion_summary.md  5_2_research_insight.md  5_3_future_step.md  5_conclusion.md
paper/6_reference/: 6_reference.md
research_results/: ai_tuned_lstm_detailed_comparison_by_metric.csv  ai_tuned_lstm_performance_growth_rate.csv  basic_statistics_pm25.csv  change_point_analysis.txt  model_performance_by_metric.csv  sample_data.csv  seoul_air_quality_data.csv
