[project]
name = "time-series-auto-llm-paper-ma"
version = "0.1.0"
description = ""
authors = [
    {name = "ruo-lee",email = "comsa333@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "pandoc (>=2.4,<3.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
